--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,3 +10,17 @@
 .scrollbar-hide::-webkit-scrollbar {
   display: none; /* for Chrome, Safari, and Opera */
 }
+
+@layer components {
+  .btn-primary {
+    @apply px-[1rem] py-[0.5rem] rounded-[8px] outline outline-[1px] outline-[#131313] text-center;
+  }
+
+  .title-primary {
+    @apply text-[20px] font-bold text-center leading-tight;
+  }
+
+  .title-sub {
+    @apply text-[12px] font-light tracking-tight leading-tight text-center;
+  }
+}
