--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,11 +13,11 @@
 
 @layer components {
   .btn-primary {
-    @apply px-[1rem] py-[0.5rem] rounded-[8px] outline outline-[1px] outline-[#131313] text-[1rem] md:text-[1.25rem] text-center;
+    @apply px-[1rem] py-[0.5rem] rounded-[12px] outline outline-[1px] outline-[#131313] text-[1rem] md:text-[1.25rem] text-center;
   }
 
   .title-primary {
-    @apply text-[20px] md:text-[28px] font-bold text-center leading-tight;
+    @apply text-[1.5rem] md:text-[2rem] font-bold text-center leading-tight py-[1rem] md:py-[2rem];
   }
 
   .title-sub {
