--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,11 +13,11 @@
 
 @layer components {
   .btn-primary {
-    @apply px-[1rem] py-[0.5rem] rounded-[12px] outline outline-[1px] outline-[#131313] text-[1rem] md:text-[1.25rem] text-center;
+    @apply px-[1rem] py-[0.5rem] rounded-[12px] outline outline-[1px] outline-[#131313] text-[1rem] md:text-[1.25rem] text-center bg-gradient-to-br from-[#131313] via-[#41444B] to-[#131313];
   }
 
   .title-primary {
-    @apply text-[1.5rem] md:text-[2rem] font-bold text-center leading-tight py-[1rem] md:py-[2rem];
+    @apply text-[1.5rem] md:text-[2rem] font-bold text-center leading-tight py-[1rem] md:py-[2rem] bg-gradient-to-tl from-[#67696e] via-[#131313] to-[#131313] bg-clip-text text-transparent;
   }
 
   .title-sub {
